# Crypto-Library

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  todo  todo.md  z3_example.py
aes/: ghash.py  linear_aes.py  padding_oracle.py  sbox_gen.c
algebraic_things/: polynomial_ring_analysis.py
attacks/: first_size_n_div_3_known_bits_of_p.ipynb
cool_tools/: binary_search.py
dlp/: collision_algo.py  create_smooth_primes.py  pollard_rho_no_opt.py
elliptic_curves/: MOV_algorithm.py  ecdh.py  elliptic_curves.py  equivalence.py  hash_to_curve.py  kind.sage  kinds.md  lift_p2.py  montgomery_curve.py  mov_sage.py  smart_attack_on_anomalous_curves.sage  smart_attack_on_anomalous_curves.sage.py  weil_pairing.py
factorization/: ec_factorization.py  fermatt_factor.py  lol.py  naive_factor.py  pollard_factorial_factoring.py  pollard_rho_factor.py  pollardfactorial.sage  pollardfactorial.sage.py  spizdil_so_stackoverflow.py
hash-functions/: sha1.py
integer_relation/: coppersmith_what_the_fuck_I_will_see_it_later.py
inverse/: coefs.py  inverse.py
lattices/: attack.py  lattice_attacks.cpp  lattice_attacks.hpp  main.cpp
linear-cryptoanalysis/: testcase.py
permutations/: rail_fence.py
polynomials/: grobner_basis.py  groebner_basis.py
prime_gen_test/: Atkin.py  Sundaram.py  check_time.py  pattern_div.py  simple_brute.py
primeness/: is_prime.py
quadr/: legandre.py
rsa/: first_size_n_div_3_known_bits_of_p.ipynb
simple_substitution/: Vigenere_Cipher.py  caesar.py  shift.py  wiener.py
site/: setup.sh
tools/: create_smooth_primes.py  (+10 more)
(+270 files in other folders)
